<resources>
    <string name="app_name">Learn Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add">ADD</string>
    <string name="_1">1</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="_25">(25)</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>